# uk-vATIS-profiles

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  pull-requests.yml
ci/scripts/: package.py
profiles/egcc/: gmc.json
profiles/eggp/: gmc.json
profiles/egph/: gmc.json
profiles/gmc/: egcc.json  egcc.yml  eggd.json  eggd.yml  eggp.yml  egjj.json  egjj.yml  egnx.json  egnx.yml  egph.json  egph.yml  egss.yml
templates/: gmc.yml
tests/: test_gmc.py  test_schemas.py
tests/schemas/: gmc.json
tmp/: eggp.json
uk_vatis_profiles/: package.py  process_profile.py
uk_vatis_profiles/processing/: process_presets.py  process_profile.py  process_transition_levels.py
