[tool.poetry]
name = "uk_vatis_profiles"
version = "0.0.0"
description = "vATIS profiles for UK VATSIM controllers"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
jsonschema = "^4.21.1"
pytest = "^8.1.1"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
